force-app/main/default/objects/Quickbook_Info__c/Quickbook_Info__c.object-meta.xml
<CustomObject>
    <label>Quickbook Info</label>
    <nameField>
        <label>Quickbook Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quickbooks Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>