force-app/main/default/objects/Quickbook_Info__c/fields/Completed_Steps__c.field-meta.xml
<CustomField>
    <fullName>Completed_Steps__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Completed Steps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>