force-app/main/default/objects/Quickbook_Info__c/fields/Last_Refresh_Token_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Refresh_Token_Date__c</fullName>
    <label>Last Refresh Token Date</label>
    <type>DateTime</type>
</CustomField>