force-app/main/default/objects/Quickbook_Info__c/fields/Progress_Value__c.field-meta.xml
<CustomField>
    <fullName>Progress_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Progress Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>