force-app/main/default/objects/Quickbook_Info__c/fields/QB_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Company_Id__c</fullName>
    <label>QB Company Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>