force-app/main/default/objects/Quickbook_Info__c/fields/Refresh_Token_Life_Days__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token_Life_Days__c</fullName>
    <label>Refresh Token Life Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>