force-app/main/default/objects/Quickbook_Info__c/fields/Sandbox_Url__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Url__c</fullName>
    <label>Base Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>