force-app/main/default/objects/Quickbook_Info__c/fields/SyncSite__c.field-meta.xml
<CustomField>
    <fullName>SyncSite__c</fullName>
    <label>SyncSite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>