force-app/main/default/objects/Quickbook_Info__c/fields/Webhook_Key__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Key__c</fullName>
    <label>Webhook URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>