force-app/main/default/objects/Quickbook_Info__c/fields/Webhook_Verifier_Token__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Verifier_Token__c</fullName>
    <label>Webhook Verifier Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>